# DataBridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resource.rc
src/: main.cpp
src/protocol/: __init__.cpp  __init__.hpp  socks5.cpp  socks5.hpp
src/widgets/: MainFrame.cpp  MainFrame.hpp
